Fixed margin issues and gap

--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ body {
 .svgIcon {
   height: 25%;
 }
+.svgIcon:hover {
+    background-color: rgb(252, 247, 240);
+    
+  }
 
 .sideBarContent {
     display: flex;
@@ -42,6 +46,7 @@ body {
     gap: 5rem;
 }
 .sideBarLogo {
+    margin-top: 1rem;
     margin-left: 1rem;
     display: flex;
     align-items: center;
@@ -107,7 +112,7 @@ body {
     background-color: rgb(255, 250, 243);
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 6fr;
+    grid-template-rows: 2fr 15fr;
 
 
 
@@ -120,9 +125,9 @@ body {
     width: 90%;
     background-color: rgb(252, 252, 252);
     grid-column: 1/2;
-    grid-row: 2/2;
+    grid-row: 1/1;
     z-index: 2;
-
+    margin-top: 1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -131,14 +136,19 @@ body {
 }
 
 .addButton {
+    background-color: rgb(252, 247, 240);
     margin-top: 0.2rem;
     margin-bottom: 0.2rem;
     margin-left: 0.8rem;
     margin-right: 0.5rem;
-    padding: 0.3rem;
+
+    padding: 0.1rem;
+
     flex: 5% 2 100px;
+
     border-style: none;
-    border-radius: 0.2rem;
+    border-radius: 0.4rem;
+
     font-weight: 500;
 
 }
@@ -152,7 +162,7 @@ body {
     border-style: none;
     height: 90%;
     flex: 90%;
-    background-color: #fafafa;
+   
     margin-right: 0.5rem;
     border-radius: 1rem;
     padding-left: 1rem;
@@ -162,40 +172,52 @@ body {
 .searchBar::placeholder {
     font-weight: bolder;
     font-size: large;
+
 }
 
 .contentShelf {
-    background-color: rgb(252, 247, 240);
-    grid-column: 1/2;
-    grid-row: 1/4;
     display: flex;
-    align-items: center;
-    justify-content: center;
+
+    background-color: rgb(252, 247, 240);
+
+    grid-column: 1/2;
+    grid-row: 2/4;
+   
+   
 }
 
 .ShelfContainer {
-    margin-top: 15rem;
+
+    margin-left: 1rem;
+    margin-top: 1rem;
+
     width: 90%;
     height: 67%;
 
     display: grid;
+
     grid-template-columns: repeat(auto-fit, minmax(175px, 12rem));
     grid-template-rows: repeat(3, 1fr);
+   
     gap: 2rem;
 }
 
 .bookTest {
+
     height: 15rem;
     background-color: #fafaf9;
+    box-shadow: 10px 10px 0.2rem rgb(221, 209, 204);
+
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 2fr 1fr 1fr 6fr;
     justify-items: center;
-    box-shadow: 10px 10px 0.2rem rgb(221, 209, 204);
+   
 }
 
 .titleStyle {
     font-size: 1.5rem;
+
     justify-self: center;
     grid-column: 2/2;
     grid-row: 1/1;
@@ -211,6 +233,7 @@ body {
 
 .pagesCountStyle {
     font-size: 0.6rem;
+    
     grid-column: 2/3;
     grid-row: 4/5;
 }
@@ -272,4 +295,17 @@ dialog {
     width: 25rem;
     height: 25rem;
 
+}
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.containerForm {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
 }
